# muTradeApi2

./: .gitignore  README.md
Frontend-SampleCode-I20/: README.md
Frontend-SampleCode-I20/DemoStrategy/FutFutCustom/: FutFutCustom.pro  futfutparams.cpp  futfutparams.h  sampleTwoLeg.cpp  sampleTwoLeg.h  sampleTwoLeg_global.h  uilibrary.cpp  uilibrary.h  uilibrary.ui
SampleCode/: CMakeLists.txt  params.out  params.txt
SampleCode-I20/: CMakeLists.txt  params.txt
SampleCode-I20/includes/: DBConverter.h  api2Exceptions.h  api2UserCommands.h  apiChangeLogs.txt  apiConstants.h  apiDataTypes.h  apiPositionStruct.h  apiStructs.h  apiTime.h  baseCommands.h  cmdDefines.h  customData.h  orderWrapperAPI.h  orderWrapperManager.h  serializeCommands.h  sgApiParameters.h  sgCommon.h  sgContext.h  sgDebugLogDefines.h  sgMktData.h  sgOrderBookDefines.h  sgSymbolDataDefines.h  sharedCommands.h  sharedDefines.h  sharedResponse.h  sharedResponse.h.orig  sharedSingleOrder.h  sharedSingleOrder.h.orig  sharedUtilities.h  strategyInfo.h  strategyWave.h  timer.h
SampleCode-I20/src/: CMakeLists.txt  README.md
SampleCode-I20/src/FutFutCustom/: CMakeLists.txt  externalInterface.cpp  futFutNew.cpp  futFutNew.h  futFutNewHedging.cpp  futFutNewHedging.h  hedging.cpp  hedging.h  params.txt  price.cpp  price.h  structure.h
SampleCode-I20/src/SampleBiddingAlgo/: CMakeLists.txt  params.txt  sampleAlgo.cpp  sampleAlgo.h
SampleCode-I20/src/SampleStrategy/: CMakeLists.txt  externalInterface.cpp  sample.cpp  sample.h
SampleCode-I20/src/benchmarking/: README.md  benchmarkStats.py  externalInterface.cpp
SampleCode-I20/src/common/: common.cpp  common.h  orderWrapper.cpp  orderWrapper.h
SampleCode-I20/src/pythonStrategy/: externalInterface.h
SampleCode-I20/src/templateAlgo/: params.txt  template.cpp  template.h
SampleCode-I20/src/test1/: CMakeLists.txt  README.md
SampleCode-I20/src/test2/: CMakeLists.txt  externalInterface.cpp  params.out
SampleCode-I20_RHEL8/: CMakeLists.txt
SampleCode-I20_RHEL8/includes/: api2UserCommands.h  apiChangeLogs.txt  apiConstants.h  apiDataTypes.h  apiPositionStruct.h  apiTime.h  cmdDefines.h  invokingApi.h  invokingApiStructs.h  ivGreekInterface.h  money.h  orderWrapperAPI.h  sgContext.h  sgDebugLogDefines.h  sgMktData.h  sgOrderBookDefines.h  sgSymbolDataDefines.h  sharedDefines.h  sharedResponse.h  sharedSingleOrder.h  strategyInfo.h  userParamsReader.h
SampleCode-I20_RHEL8/src/FutFutCustom/: futFutNew.cpp  params.txt
SampleCode-I20_RHEL8/src/SampleBiddingAlgo/: CMakeLists.txt  externalInterface.cpp  sampleAlgo.cpp  sampleAlgo.h
SampleCode-I20_RHEL8/src/SampleStrategy/: params.txt
SampleCode-I20_RHEL8/src/benchmarking/: CMakeLists.txt  sample.cpp
SampleCode-I20_RHEL8/src/common/: common.h  orderWrapper.h
SampleCode-I20_RHEL8/src/pythonStrategy/: muTradePyBase.py
SampleCode-I20_RHEL8/src/templateAlgo/: CMakeLists.txt  externalInterface.cpp
SampleCode-I20_RHEL8/src/test2/: context.cpp  paramBinaryConvert.sh  params.txt
SampleCode-P20/includes/: DBConverter.h  api2UserCommands.h  apiChangeLogs.txt  apiConstants.h  apiDataTypes.h  apiStructs.h  apiTime.h  baseCommands.h  sgContext.h  sgDebugLogDefines.h  sgMktData.h  sgSymbolDataDefines.h  sharedCommands.h  sharedDefines.h  sharedResponse.h  sharedSingleOrder.h  sharedUtilities.h  userParamsReader.h
SampleCode-P20/src/: CMakeLists.txt
SampleCode-P20/src/SampleBiddingAlgo/: params.out  params.txt  sample.txt  sampleAlgo.cpp  sampleAlgo.h  tags
SampleCode-P20/src/SampleStrategy/: releaseNotes.txt  sample.cpp  sample.h
SampleCode-P20/src/benchmarking/: sample.cpp  sample.h
SampleCode-P20/src/common/: common.cpp  common.h  orderWrapper.cpp  orderWrapper.h
SampleCode-P20/src/pythonStrategy/: CMakeLists.txt
SampleCode-P20/src/test1/: context.cpp  context.h
SampleCode-P20/src/test2/: CMakeLists.txt  context.cpp  context.h
SampleCode-P20/src/test3/: CMakeLists.txt  externalInterface.cpp  p.txt  params.txt  sampleMultiLegSpread.cpp  sampleMultiLegSpread.h
SampleCode/includes/: Doxyfile  api2Exceptions.h  api2UserCommands.h  apiConstants.h  apiDataTypes.h  apiStructs.h  apiTime.h  baseCommands.h  cmdDefines.h  serializeCommands.h  sgApiParameters.h  sgCommon.h  sgContext.h  sgDebugLogDefines.h  sgMktData.h  sgOrderBookDefines.h  sgSymbolDataDefines.h  sharedCommands.h  sharedDefines.h  sharedResponse.h  sharedSingleOrder.h  sharedUtilities.h  userParamsReader.h
SampleCode/includes/sgLib/: sgApiParameters.h  sgCommon.h  sgContext.h  sgDebugLogDefines.h  sgMktData.h  sgOrderBookDefines.h  sgSymbolDataDefines.h  sharedUtilities.h
SampleCode/src/: CMakeLists.txt  context.cpp  context.h  externalInterface.cpp  orderWrapper.cpp  orderWrapper.h
SampleCode/src/benchmarking/: CMakeLists.txt  sample.cpp  sample.h
SampleCode/src/common/: orderWrapper.cpp  orderWrapper.h
SampleCode/src/javaStrategy/: CMakeLists.txt  externalInterface.cpp  externalInterface.h
SampleCode/src/pythonStrategy/: externalInterface.cpp  pyTest1.py
SampleCode/src/test1/: CMakeLists.txt
SampleCode/src/test2/: README.md  context.cpp  context.h
SampleCode/src/test3/: externalInterface.cpp.orig  params.out  sampleMultiLegSpread.cpp  sampleMultiLegSpread.h
uTradeOpenSourceAlgos/backend/: CMakeLists.txt
uTradeOpenSourceAlgos/backend/BracketOrder/: CMakeLists.txt  bracketOrderStrategy.cpp  bracketOrderStrategy.h  externalInterface.cpp  params.txt  releaseNotes.txt
uTradeOpenSourceAlgos/backend/Sniper/: CMakeLists.txt
uTradeOpenSourceAlgos/backend/common/: orderWrapper.h
uTradeOpenSourceAlgos/backend/includes/: apiConstants.h  apiStructs.h  apiTime.h  invokingApi.h  invokingApiStructs.h  position.h  serializeCommands.h  sgDebugLogDefines.h  userParamsReader.h
uTradeOpenSourceAlgos/frontend/: algos.pro
uTradeOpenSourceAlgos/frontend/BracketOrder/: BracketOrder.pro  bracketorder.cpp  bracketorder.h  bracketorder_global.h  bracketordergui.ui
uTradeOpenSourceAlgos/frontend/Iceberg/: iceberg_global.h  icebergparams.cpp  icebergparams.h  icebergui.cpp  icebergui.h  icebergui.ui
(+83 files in other folders)
